# nb_crossref

./: .editorconfig  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.chglog/: config.yml
nb_crossref/: __init__.py  _version.py  nb_crossref.py
